manifest/objects/g2lcrm_picklist_mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Field_API_Name__c</fullName>
        <label>PickList Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Mapping__c</fullName>
        <label>PickList Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>G2LCRM Picklist Mapping</label>
    <pluralLabel>G2LCRM Picklist Mappings</pluralLabel>
</CustomObject>